adding json editor, column and header test scenario working

--- a/public/index.html
+++ b/public/index.html
@@ -31,32 +31,21 @@
               </div>
             </div>
           </div>
-          <div class="config-widget">
+          <div class="config-widget" onClick="updateConfig(event);">
             <div class="ui styled fluid accordion">
-              <div class="title active">
+              <div class="title">
                 <i class="dropdown icon"></i>
                 Columns and Headers
               </div>
-              <div class="content active accordian-content-container">
+              <div class="content accordian-content-container">
                 <div class="ui grid transition visible">
-                  <div class="row">
-                    <div class="thirteen wide column">
-                      <p>Add field_name</p>
-                    </div>
-                    <div class="two wide column">
-                      <div class="ui checkbox">
-                        <input type="checkbox" name="public">
-                        <label></label>
-                      </div>
-                    </div>
-                  </div>
                   <div class="row">
                     <div class="thirteen wide column">
                       <p>Add headerText</p>
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "2" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -67,7 +56,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "3" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -78,7 +67,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "4" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -89,7 +78,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "5" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -100,7 +89,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "6" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -111,7 +100,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "7" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -122,7 +111,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "8" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -133,7 +122,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "9" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -144,7 +133,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "10" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -155,7 +144,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "11" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -166,7 +155,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "12" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -177,7 +166,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "13" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -188,7 +177,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "14" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -207,7 +196,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "15" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -218,7 +207,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "16" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -237,7 +226,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "17" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -248,7 +237,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "18" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -259,7 +248,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "19" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -270,7 +259,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "20" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -281,7 +270,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "21" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -292,7 +281,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "22" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -303,7 +292,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "23" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -314,7 +303,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "24" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -325,7 +314,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "25" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -336,7 +325,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "26" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -355,7 +344,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "27" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -366,7 +355,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "28" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -377,7 +366,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "29" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -388,7 +377,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "30" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -399,7 +388,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "31" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -410,7 +399,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "32" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -429,7 +418,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "33" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -440,7 +429,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "34" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -451,7 +440,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "35" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -462,7 +451,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "36" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -473,7 +462,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "37" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -484,7 +473,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "38" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -495,7 +484,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "39" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -506,7 +495,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "40" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -525,7 +514,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "41" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -536,7 +525,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "42" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -547,7 +536,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "43" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -558,7 +547,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "44" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -569,7 +558,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "45" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -580,7 +569,7 @@
                     </div>
                     <div class="two wide column">
                       <div class="ui checkbox">
-                        <input type="checkbox" name="public">
+                        <input data-value = "46" type="checkbox" name="public">
                         <label></label>
                       </div>
                     </div>
@@ -615,7 +604,8 @@
   <script src="../resources/codemirror-javascript.min.js"></script>
   <script src="./fusiondatastore.js"></script>
   <script src="./fusiongrid.js"></script>
+  <script src="../resources/codemirror.foldcode.js"></script>
+  <script src="../resources/beautifier.min.js"></script>
   <script src="./test-gui.js"></script>
 </body>
-
 </html>
